# alpsplot

./: .buildinfo  .dockerfile  .gitignore  Dockerfile  README.md  figure.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg
.github/workflows/: build.yml  codecov.yml  docs.yml  gh-pages.yml  release.yml  test.yml
_sources/: index.rst.txt
_sources/utils/: basic.rst.txt  fonts.rst.txt
alpsplot/: __init__.py  colormap.py  figure.py  fit.py  optima.mplstyle  optima_bold.mplstyle  utils.py  version.py
alpsplot/fonts/: __init__.py
alpsplot/utils/: __init__.py  basic.py  error_bar.py  fit.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  figure.rst  fonts.rst  index.rst  linkcode.py  utils.rst
examples/: figure_attack_asr_alpha.py  plot.py
examples/math/: 24年高考新一卷第13题.html  24年高考新一卷第7题.html  math.html
fonts/: Optima_win.ttc  list.py  merge_ttc.py  split_ttc.py
projects/automl/: get_cmap.py  plot_adv_train_cifar10.py  plot_badnet.py  plot_badnet_cifar10.py  plot_badnet_cifar100.py  plot_badnet_imagenet.py  plot_eps_nes.py  plot_eps_pgd.py  plot_eps_pgd_new.py  plot_extraction.py  plot_extraction_cifar10.py  plot_extraction_cifar100.py  plot_extraction_imagenet.py  plot_extraction_imagenet32.py  plot_extraction_mitigation.py  plot_grad_var_cifar10.py  plot_grad_var_cifar100.py  plot_grad_var_imagenet32.py  plot_membership.py  (+26 more)
test/: test_figure.py  test_fit.py  test_fonts.py  test_utils.py
utils/: basic.html  error_bar.html  fit.html  fonts.html  index.html
(+28 files in other folders)
