[metadata]
name = alpsplot
version = attr:alpsplot.__version__
description = Python plotting library of alps-lab style using matplotlib.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ain-soph/alpsplot
docs_url = https://ain-soph.github.io/alpsplot/
author = Ren Pang
author_email = rbp5354@psu.edu
license = GPL-3
classifier =
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3
keywords = 
  plot
  python
  matplotlib
platforms = any

[options]
zip_safe = False
packages = find:
install_requires =
  matplotlib
  numpy
  scipy
python_requires = >=3.9

[options.package_data]
alpsplot = fonts/*.ttf

[options.packages.find]
exclude =
  test
